# sql_0710

./: .gitignore  README.md  功能图描述.txt
AIAssistant/: README.md  pyproject.toml
AIAssistant/.github/workflows/: ci.yml
AIAssistant/deploy/: README.md
AIAssistant/deploy/ci/: ci.yml
AIAssistant/deploy/docker/: Dockerfile  docker-compose.yml
AIAssistant/deploy/env/: .env.example
AIAssistant/deploy/ops/: logging_convention.md  monitoring_convention.md
AIAssistant/docs/: architecture_mapping.md  data_processing_center_design.md  智能助手架构说明文档.md
AIAssistant/src/: __init__.py  application.py
AIAssistant/src/configs/: app_settings.py  datasource_settings.py  fiscal_data_loader.py  memory_settings.py  model_settings.py  retrieval_settings.py  security_settings.py
AIAssistant/src/data_processing_center/: data_cleaning.py  data_monitoring.py  data_quality.py  data_sync.py  datasource_management.py  metadata_management.py  retrieval_experiments.py  scheduled_jobs.py  table_structure_analysis.py  vectorization_tasks.py
AIAssistant/src/services/: assistant_service.py  governance_service.py  knowledge_service.py  memory_service.py  query_service.py  rag_service.py
AIAssistant/tests/: README.md  conftest.py
AIAssistant/tests/contract/: test_admin_contracts.py  test_api_contracts.py
AIAssistant/tests/integration/: test_chat_to_answer_flow.py  test_edge_cases.py  test_full_pipeline_report.py  test_knowledge_and_sql_fusion.py  test_rag_enrichment_real.py
AIAssistant/tests/unit/: test_context_memory.py  test_excel_batch.py  test_rag_batch.py  test_rag_retrieval.py  (+5 more)
(+225 files in other folders)
